# 342-2

342-2-submit/: Scene.cpp  SpotLightSource.cpp  christmas_tree.txt
RayTracer/: CMakeLists.txt  Camera.cpp  Camera.h  Colour.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Display.cpp  Display.h  LightSource.cpp  LightSource.h  Material.h  Matrix.cpp  Matrix.h  NonCopyable.h  Normal.h  Object.cpp  Object.h  PinholeCamera.h  Point.h  PointLightSource.cpp  PointLightSource.h  Scene.cpp  Scene.h  SceneReader.cpp  SceneReader.h  Sphere.cpp  Sphere.h  SpotLightSource.cpp  SpotLightSource.h  rayTracerMain.cpp  utility.h
RayTracer/testScenes/: Cone.txt  Cylinder.txt  SpotLight.txt  christmas_tree.txt  mirror_sphere.txt  sampleScene.txt  snowman.txt  spotlight_spheres.txt
